trunk/Archive2/60/99b781deffe7b1/output
+ g++ -std=c++14 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:9:16: error: could not convert '5' from 'int' to 'std::vector<int>'
     transform(5);
                ^
main.cpp:8:9: warning: unused variable 'i' [-Wunused-variable]
     int i = 5;
         ^
+ clang++ -stdlib=libc++ -std=c++14 -O2 -Wall -pedantic -pthread main.cpp -lcxxrt -ldl
main.cpp:9:5: error: no matching function for call to 'transform'
    transform(5);
    ^~~~~~~~~
main.cpp:3:6: note: candidate function not viable: no known conversion from 'int' to 'std::vector<int>' for 1st argument
void transform(std::vector<int> i) {
     ^
1 error generated.
